<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kylemsguy.tcasmobile.AnswerFragment">

    <ScrollView
        android:id="@+id/textAreaScroller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/questionId"
        android:layout_alignParentTop="true"
        android:layout_below="@id/pager_title_strip"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/questionText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:autoLink="all"
            android:textIsSelectable="true"
            android:text="@string/loading_first_question" />

    </ScrollView>

    <TextView
        android:id="@+id/questionId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/idLinearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textIsSelectable="true"
        android:text="@string/please_wait" />

    <LinearLayout
        android:id="@+id/idLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/idAnswerFieldLL"
        android:layout_alignLeft="@+id/textAreaScroller"
        android:layout_alignStart="@+id/textAreaScroller"

        android:weightSum="1">

        <Button
            android:id="@+id/btnSkipTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="skipTemp"
            android:text="@string/skip_temp"
            android:textSize="15sp"
            android:layout_weight="1.00" />

        <Button
            android:id="@+id/btnSkipPerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="skipPerm"
            android:text="@string/skip_perm"
            android:textSize="15sp"
            android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/idAnswerFieldLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <EditText
            android:id="@+id/answerField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/response_prompt"
            android:inputType="textMultiLine|textCapSentences"
            android:layout_weight="1.00" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitAnswer"
            android:text="@string/answer" />

    </LinearLayout>
</RelativeLayout>