<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kylemsguy.tcasmobile.LoginActivity2$PlaceholderFragment">

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/lblUsername"
        android:singleLine="true" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_username"
        android:layout_below="@+id/login_username"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/lblPassword"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/loggest_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_password"
        android:layout_below="@+id/login_password"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/lblLoggestIn"
        android:onClick="loggestIn" />

</RelativeLayout>